<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_landing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <include
        android:id="@+id/actions"
        layout="@layout/component_action_buttons"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/layDateFilter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="24dp"
            android:text="@string/main_date"
            android:textColor="@color/accent"
            android:textSize="16sp" />

        <ImageView
            android:contentDescription="@string/main_imgrightarrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_right_arrow_24dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/txtDate"
            android:layout_marginStart="8dp"/>
    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/actions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layDateFilter">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewShift"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/secondary"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toTopOf="@+id/actions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layDateFilter" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animWaiting"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:lottie_rawRes="@raw/anim_loading"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintBottom_toTopOf="@+id/actions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layDateFilter" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animNoData"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:lottie_rawRes="@raw/anim_no_data"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintBottom_toTopOf="@+id/actions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layDateFilter" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_filter"
        android:text="@string/main_fab_filters"
        android:textAllCaps="false"
        app:rippleColor="@color/accent"
        app:icon="@drawable/ic_filter"
        app:layout_constraintBottom_toTopOf="@+id/actions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>